<resources>
    <string name="app_name">Travelendar</string>

    <!--Main Activity-->
    <string name="error_loading_trips_message">Erro ao carregar viagens!</string>
    <string name="main_menu_add_trip_title">Add viagem</string>

    <!--Tab 0 - UpComing trips-->
    <string name="title_tab_one_upcoming_trip">Próximas</string>

    <!--Tab 1 - Concluded trips-->
    <string name="title_tab_two_conclued_trip">Concluídas</string>

    <!-- Add trip-->
    <string name="title_tab_three_add_trip">Adicionar nova viagem</string>
    <string name="bt_add_trip">Add</string>
    <string name="add_trip_successful">Viagem adicionada!</string>
    <string name="add_trip_error">Erro ao adicionar viagem!</string>
    <string name="fill_all_fields_message">Por favor, preencher todos os campos!</string>
    <string name="date_picker_error_message">Erro ao abrir calendário!</string>
    <string name="toolbar_title_add_trip">Adicionar nova viagem</string>

    <!--Trip Details-->
    <string name="bt_end_trip">Finalizar Viagem</string>
    <string name="end_trip_successful_message">Viagem concluída!</string>
    <string name="end_trip_error_message">Erro ao concluir viagem!</string>
    <string name="rate_trip_message_title">Avalie essa viagem!</string>
    <string name="rate_trip_confirmation">Confirmar avaliação</string>
    <string name="toolbar_title_details">Detalhes da viagem</string>
    <string name="menu_details_end_trip_title">Finalizar viagem</string>
    <string name="menu_details_share_trip_title">Compartilhar viagem</string>
    <string name="menu_details_delete_trip_title">Deletar viagem</string>
    <string name="share_trip_title">Compartilhar viagem</string>
    <string name="share_trip_message">Gostaria de compartilhar com você essa viagem que fiz\.\.\.</string>
    <string name="share_app_link">https://app.travelendar.com/download</string>
    <string name="delete_trip_successful_message">Viagem deletada!</string>
    <string name="delete_trip_error_message">Erro ao deletar viagem!</string>

    <!--Trip item information-->
    <!--Trip hints-->
    <string name="trip_to_where_hint">Ex.: Miami</string>
    <string name="trip_from_where_hint">Ex.: Manaus</string>
    <string name="trip_initial_date_hint">Ex.: 01/01/2019</string>
    <string name="trip_end_date_hint">Ex.: 01/02/2019</string>
    <string name="trip_rate_hint">Ex.: 5 Stars</string>
    <string name="trip_budget_hint">Ex.: R$10.000,00</string>
    <string name="trip_general_notes_hint">Ex.: Caminhar na rua Lincoln Road e conhecer o South Point Park</string>
    <string name="trip_status_hint">Ex.: Concluded</string>

    <!--Trip Labels-->
    <string name="trip_to_where_label">Para:\ </string>
    <string name="trip_from_where_label">De:\ </string>
    <string name="trip_initial_date_label">Data Inicial:\ </string>
    <string name="trip_end_date_label">Data Final:\ </string>
    <string name="trip_rate_label">Nota:\ </string>
    <string name="trip_budget_label">Despesas:\ </string>
    <string name="trip_general_notes_label">Anotações Gerais:\ </string>
    <string name="trip_status_label">Status:\ </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="widget_empty_text">Não há nenhuma viagem próxima\.\.\.</string>
    
    <string name="google_maps_key">AIzaSyASjTYINNbC7PplmafFDbMusyGO3tGehAk</string>

    <!--Content descriptions-->
    <string name="star1_content_description">Avalie com uma estrela!</string>
    <string name="star2_content_description">Avalie com duas estrela!</string>
    <string name="star3_content_description">Avalie com três estrelas!</string>
    <string name="star4_content_description">Avalie com quatro estrelas!</string>
    <string name="star5_content_description">Avalie com cinco estrelas!</string>
    <string name="rate_button_content_description">Clique para avaliar a viagem!</string>

    <string name="widget_trip_content_description">Imagem de um avião simbolizando uma viagem!</string>



</resources>
