<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.nanodegreeprojects.capstone.travelendar.activities.AddTripActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_primary_dark"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/toolbar_title_add_trip" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/theme_primary"
            android:elevation="4dp"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_trip_to_where_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_to_where_label" />

                <EditText
                    android:id="@+id/et_trip_to_where"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_to_where_hint"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/tv_trip_from_where_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_from_where_label" />

                <EditText
                    android:id="@+id/et_trip_from_where"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_from_where_hint"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/tv_trip_initial_date_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_initial_date_label" />

                <EditText
                    android:id="@+id/et_trip_initial_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_initial_date_hint"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/tv_trip_end_date_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_end_date_label" />

                <EditText
                    android:id="@+id/et_trip_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_end_date_hint"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/tv_trip_budget_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_budget_label" />

                <EditText
                    android:id="@+id/et_trip_budget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_budget_hint"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/tv_trip_general_notes_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_general_notes_label" />

                <EditText
                    android:id="@+id/et_trip_general_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_general_notes_hint"
                    android:inputType="text|textMultiLine" />


            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>