<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/ll_rate_stars"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="5dp">


    <ImageView
        android:id="@+id/iv_rate_star_1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:onClick="rateClick"
        android:contentDescription="@string/star1_content_description"
        android:src="@drawable/star_blank" />

    <ImageView
        android:id="@+id/iv_rate_star_2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:onClick="rateClick"
        android:contentDescription="@string/star2_content_description"
        android:src="@drawable/star_blank" />

    <ImageView
        android:id="@+id/iv_rate_star_3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:onClick="rateClick"
        android:contentDescription="@string/star3_content_description"
        android:src="@drawable/star_blank" />

    <ImageView
        android:id="@+id/iv_rate_star_4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:onClick="rateClick"
        android:contentDescription="@string/star4_content_description"
        android:src="@drawable/star_blank" />

    <ImageView
        android:id="@+id/iv_rate_star_5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:onClick="rateClick"
        android:contentDescription="@string/star5_content_description"
        android:src="@drawable/star_blank" />
</LinearLayout>
