<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/widgetBackground"
    android:orientation="horizontal"
    android:id="@+id/ll_widget"
    android:padding="5dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:src="@drawable/ic_airplanemode_active_black_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_trip_to_where_label_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_to_where_label"
            android:textColor="@color/font_white_widget"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_trip_from_where_label_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_from_where_label"
            android:textColor="@color/font_white_widget"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_trip_initial_date_label_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_initial_date_label"
            android:textColor="@color/font_white_widget"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_trip_end_date_label_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_end_date_label"
            android:textColor="@color/font_white_widget"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>

